# Seburo

./: .CMakeLists.txt.swp  .gitignore  CMakeLists.txt  CMakeLists2.txt  Doxyfile  README.md  s9.icns  seburo.sublime-project  seburo.sublime-workspace  todo.md  ubuntu_setup.txt
applications/leeds/: CMakeLists.txt
applications/leeds/data/: basic_lighting.vert  ground.stl  intrinsics0.yml  intrinsics1.yml  intrinsics2.yml  intrinsics3.yml  intrinsics4.yml  intrinsics5.yml  intrinsics6.yml  intrinsics7.yml  leedsmesh.frag  leedsmesh.vert  meshpoint.frag  meshpoint.vert  picker.frag  quad.frag  quad.vert  quad_texture.vert  settings.xml
applications/leeds/include/: app.hpp  scanner.hpp  states.hpp
applications/leeds/src/: app.cpp  scanner.cpp  states.cpp
applications/template/: CMakeLists.txt
applications/touchwall/: CMakeLists.txt
applications/touchwall/data/: quad.frag  quad_texture.frag  quad_texture.vert
applications/touchwall/include/: app.hpp
applications/touchwall/src/: app.cpp
data/: gripper.blend  gripper.blend1  gripper.blend2  gripper.stl  hellknight.md5mesh  oculus_profile_oni.json  test.mtl  test.pcd  test_bones.blend  test_bones.blend1  test_bones.blend2  test_bones.md5mesh  test_bones.md5mesh.md5anim  test_bones.md5mesh.md5mesh
data/Leeds/: intrinsics0.yml  intrinsics1.yml  intrinsics2.yml  intrinsics3.yml  intrinsics4.yml  intrinsics5.yml  intrinsics6.yml  intrinsics7.yml  settings.xml
data/room/: Design_room.mtl  room.mtl
doc/html/: AntTweakBar_8h_source.html  DefaultLogger_8hpp_source.html  Exporter_8hpp_source.html  IOStream_8hpp_source.html  IOSystem_8hpp_source.html  Importer_8hpp_source.html  LogStream_8hpp_source.html  Logger_8hpp.html  Logger_8hpp_source.html  NullLogger_8hpp_source.html  ProgressHandler_8hpp_source.html  SOIL_8h_source.html  __detail_8hpp.html  __detail_8hpp_source.html  __fixes_8hpp.html  __fixes_8hpp_source.html  __swizzle_8hpp.html  __swizzle_8hpp_source.html  __swizzle__func_8hpp.html  __swizzle__func_8hpp_source.html  __vectorize_8hpp.html  __vectorize_8hpp_source.html  ai__assert_8h_source.html  anim_8h.html  anim_8h_source.html  annotated.html  application_8hpp.html  application_8hpp__incl.map  application_8hpp__incl.md5  application_8hpp_source.html  asset_8hpp_source.html  assimp_2defs_8h_source.html  associated__min__max_8hpp.html  associated__min__max_8hpp_source.html  bit_8hpp.html  bit_8hpp_source.html  bug.html  camera_8cpp.html  camera_8cpp__incl.map  camera_8cpp__incl.md5  (+2129 more)
doc/latex/: Logger_8hpp.tex  __detail_8hpp.tex  __fixes_8hpp.tex  __swizzle_8hpp.tex  __swizzle__func_8hpp.tex  __vectorize_8hpp.tex  anim_8h.tex  annotated.tex  associated__min__max_8hpp.tex  bit_8hpp.tex  bug.tex  camera_8cpp.tex  camera_8h.tex  camera_8hpp.tex  cexport_8h.tex  classAssimp_1_1DefaultLogger.eps  classAssimp_1_1DefaultLogger.tex  classAssimp_1_1Exporter.tex  classAssimp_1_1IOStream.tex  classAssimp_1_1IOSystem.tex  classAssimp_1_1Importer.tex  classAssimp_1_1LogStream.tex  classAssimp_1_1Logger.eps  classAssimp_1_1Logger.tex  classAssimp_1_1NullLogger.eps  classAssimp_1_1NullLogger.tex  classAssimp_1_1ProgressHandler.tex  classTiXmlAttribute.tex  classTiXmlAttributeSet.tex  classTiXmlBase.tex  classTiXmlComment.tex  classTiXmlDeclaration.tex  classTiXmlDocument.tex  classTiXmlElement.tex  classTiXmlHandle.tex  classTiXmlNode.tex  classTiXmlOutStream.tex  classTiXmlParsingData.tex  classTiXmlPrinter.tex  classTiXmlString.tex  (+600 more)
examples/Basic/: CMakeLists.txt  app.cpp  app.hpp
examples/Leeds/: CMakeLists.txt  app.cpp  app.hpp
examples/basic/: CMakeLists.txt  app.cpp  app.hpp
examples/fbo/: CMakeLists.txt  app.cpp  app.hpp
examples/md5/: CMakeLists.txt  app.cpp  app.hpp
examples/model/: CMakeLists.txt  app.cpp  app.hpp
examples/multiple/: CMakeLists.txt  app.cpp  app.hpp
examples/oculus/: CMakeLists.txt  app.cpp  app.hpp
examples/openni/: CMakeLists.txt  app.cpp  app.hpp
examples/picking/: CMakeLists.txt  app.cpp  app.hpp
examples/texture/: CMakeLists.txt  app.cpp  app.hpp
examples/ux/: CMakeLists.txt  app.cpp  app.hpp
examples/video/: CMakeLists.txt  app.cpp  app.hpp
html5/: README.md  base_template.html  heart.html  ray_march.html  shaders
html5/js/: useful_webgl.js  webgl-utils.js
include/: asset.hpp  camera.hpp  common.hpp  events.hpp  fbo.hpp  geom.hpp  geometry.hpp  primitive.hpp  s9gear.hpp  s9globject.hpp  s9xml.hpp  shader.hpp  shapes.hpp  states.hpp  utils.hpp  vertex_types.hpp  video.hpp  visualapp.hpp  wingedge.hpp
include/GL/: glext.h  glxew.h  wglew.h  wglext.h
include/gl/: common.hpp  fbo.hpp  geometry.hpp  glfw_app.hpp  shader.hpp  shapes.hpp  shapes_gl.hpp  video.hpp
include/linux/: gtk_functions.hpp  uvc_camera.hpp
include/s9/: application.hpp  asset.hpp  camera.hpp  common.hpp  compiler_utils.hpp  composite_shapes.hpp  context.hpp  cvprocess.hpp  defs.h  events.hpp  file.hpp  geometry.hpp  geometry.old  image.hpp  material.hpp  math_utils.hpp  md5.hpp  node.hpp  obj_mesh.hpp  primitive.hpp  primitives.hpp  s9gear.hpp  s9xml.hpp  shapes.hpp  skeleton.hpp  state.hpp  string_utils.hpp  utils.hpp  vertex_types.hpp  window.hpp  (+3 more)
scratch/: wingedge.old
scratch/video/: CMakeLists.txt  app.hpp
scripts/: newapplication.py  osx_paths.sh  osx_paths_examples.sh
shaders/: accumulator.frag  basic_lighting.frag  block_match.frag  flatcam.vert  gripper.frag  gripper.vert  leedsmesh.frag  leedsmesh.vert  lighting.frag  lighting.vert  meshpoint.frag  meshpoint.vert  picker.vert  quad.frag  quad.vert  quad_texture.frag  quad_texture.vert
src/: app.cpp  app.hpp  application.cpp  asset.cpp  assets.cpp  camera.cpp  camera.hpp  camera_manager.cpp  camera_manager.hpp  common.hpp  composite_shapes.cpp  config.hpp  cvprocess.cpp  fbo.cpp  fbo.hpp  file.cpp  geom.hpp  geometry.cpp  geometry.old  glutils.hpp  image.cpp  md5.cpp  mesh.cpp  mesh.hpp  node.cpp  obj_mesh.cpp  pclmesh.cpp  pclmesh.hpp  primitive.cpp  primitive.hpp  s9gear.hpp  s9globject.hpp  s9xml.cpp  shader.cpp  shapes.cpp  shapes.hpp  skeleton.cpp  state.cpp  states.cpp  tinystr.cpp  (+12 more)
template/: .gitignore  CMakeLists.txt
(+265 files in other folders)
